--- a/package.json
+++ b/package.json
@@ -1,19 +1,22 @@
 {
-  "name": "referenced-during-render",
-  "version": "1.0.0",
-  "description": "[Vue warn]: Property or method &#34;author&#34; is not defined on the instance but referenced during render",
+  "name": "nuxt-express-jest-ts",
+  "version": "1.1.0",
+  "description": "Express & Jest & Typescript in Nuxt.js app",
   "author": "Sketchnotes",
-  "private": true,
+  "private": false,
   "scripts": {
     "dev": "cross-env NODE_ENV=development nodemon server/index.ts --watch server",
-    "build": "nuxt build",
+    "build": "nuxt-ts build",
     "start": "cross-env NODE_ENV=production ts-node --project 'server/tsconfig.json' server/index.ts",
-    "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "generate": "nuxt-ts generate",
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
     "test": "jest"
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint"
+    "*.{js,jsx,vue,ts,tsx}": [
+      "eslint --no-ignore .eslintrc.js",
+      "git add"
+    ]
   },
   "husky": {
     "hooks": {
@@ -31,11 +34,11 @@
   },
   "devDependencies": {
     "@nuxt/typescript-build": "^0.5.6",
-    "@nuxtjs/eslint-config": "^1.0.1",
+    "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "@nuxtjs/stylelint-module": "^3.1.0",
+    "@types/jest": "^25.1.2",
     "@vue/test-utils": "^1.0.0-beta.27",
-    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^4.1.0",
@@ -48,6 +51,7 @@
     "prettier": "^1.16.4",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^19.0.0",
+    "ts-jest": "^25.2.0",
     "vue-jest": "^4.0.0-0"
   }
 }
